test/correct/TwoLetterChar.hs
module TwoLetterChar where

main = (f '\'', g '\t')

f '\'' = 3

g '\t' = 4

