test/typeerrors/Edinburgh/Ex3.hs
module Ex3 where

m f (h:t) = f h : f t
